--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xyflow/react": "^12.3.6",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
